This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
2011-01-04
   * reference.xml: Add icons showing the point shapes in SetPointShapes().
   * images/shape-*.png: Add 20 new image files for point shapes.

2011-01-03
   * reference.xml: Document new behavior of functions to reset parameters
     to defaults when no arguments (or special values) are supplied:
     SetLegendPixels(), SetNumXTicks(), SetNumYTicks(), SetXAxisPosition(),
     and SetYAxisPosition(). Documented existing behavior of functions to
     reset parameters to defaults: SetXTickIncrement(), SetYTickIncrement(),
     SetXTitle(), and SetYTitle().

2010-12-29
   * developer.xml: Document changes as a result of fixing a bug with
     color allocation vs multiple plots per image. Add 2 new internal
     functions and remove 1 unused internal function.

2010-12-28
   * reference.xml: SetLegend(NULL) now clears the legend array.

2010-12-26
   * advanced.xml: Fix wrong-case color name.

   * reference.xml: Document that SetBgImage() and SetPlotAreaBgImage()
     take NULL as an input_file argument to disable the background image.

   * reference.xml, functions.xml: Remove SetLabelColor() from the manual.
     This is a deprecated function, and no other deprecated functions are
     documented.
   * variables.list: Remove label_color variable. There is no such variable.
     It might have been associated with SetLabelColor at one time.

   * concepts.xml: Add new section "Plot Element Colors" with a table that
     maps plot elements to the functions that set their color.

2010-12-16
   * pdf.xsl: Customize the page headers for PDF so the chapter title or